# smart-diff

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  SECURITY.md  plan.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: lint.yml
hooks/: prepare-commit-msg.example
src/smart_diff/: __init__.py  cli.py  config.py  git_utils.py  html_report.py  i18n.py  ollama_client.py  output.py  user_config.py
