[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-diff"
version = "0.1.0"
description = "Analyze git diffs with a local LLM (Ollama) — summaries and commit messages"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Smart Diff" }]
keywords = ["git", "diff", "ollama", "llm", "code-review", "commit-message"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "ollama>=0.3.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/smart-diff"
Repository = "https://github.com/YOUR_USERNAME/smart-diff"
Issues = "https://github.com/YOUR_USERNAME/smart-diff/issues"

[project.scripts]
smart-diff = "smart_diff.cli:main"
git-dd = "smart_diff.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py38"
